# databricks-genie-spaces

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  basic_usage_notebook.py
src/databricks_genie_spaces/: __init__.py  spaces.py
tests/: __init__.py  test_spaces.py
